# Distributed-memory-bus-for-multi-agent-coordination

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_2026-05-28.md  CLAUDE.md  CONTEXT.md  Evaluation_Instructions.md  Makefile  README.md  REPRODUCIBILITY.md  RUNBOOK.md  Review - Cliff theorem proof audit for Syed Abdullah Hassan (2026-05-28).md  Review - Manuscript audit for Syed Abdullah Hassan (2026-05-28).md  agentic_fund_project.md  draft1.md  draft2.md  draft3.md  draft3_path_to_5.md  draft3_remediation_plan.md  draft3_review.md  experiment_plan.md  insights.txt  neurIPS.md  neurips_novelty_plan.md  plan-v3.md  plan.md  publication_guide.md  pyproject.toml  reading-list.md  requirements-dev.txt  requirements.txt  thesis_PLAN.md  thesis_writing_plan.md
.github/workflows/: ci.yml
configs/benchmark/: c1-v0.1.yaml
configs/experiments/: baselines-openai.yaml  baselines.yaml  h1.yaml  h2.yaml  h3.yaml  h4.yaml  h5.yaml  h6.yaml  h7.yaml  h8.yaml  smoke-h1.yaml  smoke-h2.yaml  smoke-h3.yaml  smoke-h4.yaml
configs/training/: icae-7b-dialogue.yaml  icae-7b-tags.yaml  icae-7b.yaml
docker/: Dockerfile  Dockerfile.cuda  docker-compose.yml
docs/: ARCHITECTURE.md  HYPOTHESIS_IMPLEMENTATION_PLAN.md  TECHNICAL_REFERENCE.md  TECHNICAL_REFERENCE_V3.md  agent_readiness.yaml  coordination_cliff_theory.md  scope-signoff.md
docs/adr/: ADR-001-compressor-architecture.md  ADR-002-storage-stack.md  ADR-003-inference-backends.md  ADR-004-agent-runtime.md  ADR-005-future-cryptographic-commit.md  ADR-006-gptoss-scoping-and-calibrated-regime.md  ADR-007-caac-operating-point-framing.md  ADR-008-compounding-error-model-not-theorem.md  ADR-009-thesis-title-multi-fragment-scope.md
papers_markdown/: Bai2025_AOI.md  Chirkova2025_PROVENCE.md  Jin2025_SARA.md  Li2024_PromptCompressionSurvey.md  Li2025_MaaS.md  Pan2024_LLMLingua2.md  Paper1_Real-Time_AI_Service_Economy.md  Paper1_Supplementary.md  Saleh2025_MessageBrokers_GenAI.md  Tang2024_PerceptionCompressor.md  Xu2023_RECOMP.md  Yu2026_MultiAgentMemoryArchitecture.md  Zhu2025_MultiAgentBench.md  financial-analysis-university-ai-service-economy.md  integrator-architecture.md  software-architecture.md  system-architecture.md  use-case-university-ai-service-economy.md
papers_neurips_iclr/: paper_list.md
papers_neurips_iclr/agents_tools/: 01_react.md  02_toolformer.md  03_agentbench.md  04_webarena.md  05_voyager.md  06_ghost_minecraft.md  07_taskweaver.md  08_os_copilot.md  09_swe_agent.md  10_opendevin.md
papers_neurips_iclr/benchmarks/: 01_gaia.md  02_mmlu.md  03_humaneval.md  04_swebench.md  05_hotpotqa.md  06_helm.md  07_mt_bench.md  08_bigbench.md  09_narrativeqa.md  10_multihoprag.md
papers_neurips_iclr/compression/: 01_llmlingua.md  02_llmlingua2.md  03_longllmlingua.md  04_selective_context.md  05_gist_tokens.md  06_autocompressor.md  07_icae.md  08_recomp.md  09_compressive_transformers.md  10_cpc.md  11_compression_survey.md  12_nugget.md  13_pcrl.md  14_xrag.md  15_minitron.md
papers_neurips_iclr/long_context/: 01_lost_in_middle.md  02_ruler.md  03_longbench.md  04_yarn.md  05_longrope.md  06_ring_attention.md  07_infini_attention.md  08_streamingllm.md  09_s2a.md  10_memwalker.md
papers_neurips_iclr/memory/: 01_memgpt.md  02_cognitive_arch_survey.md  03_readagent.md  04_recurrentgpt.md  05_memorybank.md  06_ret_llm.md  07_think_in_memory.md  08_scm.md  09_longterm_memory_survey.md  10_memwalker.md
papers_neurips_iclr/methodology/: 01_attention_is_all_you_need.md  02_lora.md  03_dpo.md  04_constitutional_ai.md  05_tree_of_thoughts.md
papers_neurips_iclr/multi_agent/: 01_autogen.md  02_metagpt.md  03_camel.md  04_generative_agents.md  05_reflexion.md  06_agentverse.md  07_chatdev.md  08_dylan.md  09_agentscope.md  10_multiagent_debate.md  11_proagent.md  12_sotopia.md  13_corex.md  14_marl_survey.md  15_position_multi_agent.md
papers_neurips_iclr/privacy/: 01_machine_unlearning.md  02_privacy_prompt_tuning.md  03_membership_inference.md  04_dp_opt.md  05_propile.md
papers_neurips_iclr/rag_retrieval/: 01_rag_original.md  02_raptor.md  03_self_rag.md  04_hipporag.md  05_graphrag.md  06_crag.md  07_colbertv2.md  08_fid.md  09_realm.md  10_atlas.md  11_adaptive_rag.md  12_flare.md  13_knn_lm.md  14_replug.md  15_multihoprag.md
papers_neurips_iclr/scaling/: 01_chinchilla.md  02_scaling_laws.md  03_switch_transformers.md  04_flashattention2.md  05_speculative_decoding.md
scripts/: bootstrap_theta_q.py  bt_h12.py  build_thesis.sh  debug_mps_segfault.py  deep_diag.py  download_models.sh  generate_training_data.py  production_run.py  recompute_ctr.py  regen_figures.py  reproduce_baselines.sh  reproduce_chapter5.sh  reproduce_chapter6.sh  reproduce_chapter7.sh  reproduce_chapter8.sh  rerun_h1h2_h3.py  rerun_h4_with_truncation.py  run_ablations.sh  run_ablations_v2.sh  run_all_diag.py  short_run.py
src/m6/: __init__.py  cli.py  metrics.py
src/m6/agents/: __init__.py  orchestrator.py
src/m6/analysis/: __init__.py  cross_hypothesis_correction.py  unified_table.py  validate_theorem.py
src/m6/benchmark/: __init__.py  cli.py  generator.py  schemas.py  tags.py
src/m6/compressors/: __init__.py  base.py  caac.py  cache.py  filter.py  icae.py  (+4 more)
tests/: conftest.py
tests/integration/: test_h2_smoke.py  test_memory_bus_api.py
tests/unit/: test_audit_chain.py  test_autogen_assignment_parser.py  test_baselines_dataset_extract.py  test_benchmark_generator.py  test_cliff_fitting.py  test_compressor_identity.py  test_cost_model.py  test_lingua2_device_resolution.py  test_mann_whitney_u.py  test_metrics_qa.py  test_metrics_tag_preservation.py  test_paired_bootstrap_p.py  test_policy_middleware.py  test_scratchpad.py  test_settings.py  test_statistics.py  test_tag_vector.py  test_workload_constraint_satisfaction.py
thesis_latex/: citations.bib  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.tex  main.xmpdata
thesis_latex/Chapters/: abbreviations.tex  abstract.tex  appendices.tex  experiments.tex  foreword.tex  implementation.tex  introduction.tex  relatedwork.tex  summary.tex  tiivistelma.tex
(+79 files in other folders)
